--- a/my_training_notes/pubspec.yaml
+++ b/my_training_notes/pubspec.yaml
@@ -37,6 +37,14 @@ dependencies:
   firebase_core: ^1.12.0
   firebase_auth: ^3.3.7
   google_sign_in: ^5.2.3
+  get_it: ^7.2.0
+  bloc: ^8.0.2
+  equatable: ^2.0.3
+  injectable: ^1.5.3
+  json_annotation: ^4.4.0
+  auto_route: ^3.2.3+1
+  uuid: ^3.0.5
+  cloud_firestore: ^3.1.8
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +56,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  build_runner: ^2.1.7
+  injectable_generator: ^1.5.3
+  json_serializable: ^6.1.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -62,7 +73,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
